@@ -18,45 +18,45 @@
  * Authors:
  *      Mathias Hasselmann
  */
-#include "entropy-window.h"
+#include "progress-window.h"
 
 #include <libepc/tls.h>
 #include <glib/gi18n-lib.h>
 #include <gtk/gtk.h>
 
 /**
- * SECTION:entropy-window
+ * SECTION:progress-window
  * @short_description: feedback when collecting random bits
- * @include: libepc-ui/entropy-window.h
+ * @include: libepc-ui/progress-window.h
  * @stability: Unstable
  *
- * The #EpcEntropyWindow can be used to provide some feedback when needs
+ * The #EpcProgressWindow can be used to provide some feedback when needs
  * to collect randomized data to generate for instance private keys.
  *
  * See also: #epc_tls_private_key_new
  */
 
 /**
- * EpcEntropyWindowPrivate:
+ * EpcProgressWindowPrivate:
  *
- * Private fields of the #EpcEntropyWindow class.
+ * Private fields of the #EpcProgressWindow class.
  */
-struct _EpcEntropyWindowPrivate
+struct _EpcProgressWindowPrivate
 {
   guint timeout_id;
 };
 
-G_DEFINE_TYPE (EpcEntropyWindow, epc_entropy_window, GTK_TYPE_WINDOW);
+G_DEFINE_TYPE (EpcProgressWindow, epc_progress_window, GTK_TYPE_WINDOW);
 
 static gboolean
-epc_entropy_window_timeout_cb (gpointer data)
+epc_progress_window_timeout_cb (gpointer data)
 {
   gtk_progress_bar_pulse (data);
   return TRUE;
 }
 
 static void
-epc_entropy_window_init (EpcEntropyWindow *self)
+epc_progress_window_init (EpcProgressWindow *self)
 {
   GtkWidget *heading;
   GtkWidget *progress;
@@ -64,8 +64,8 @@ epc_entropy_window_init (EpcEntropyWindow *self)
   GtkWidget *vbox;
 
   self->priv = G_TYPE_INSTANCE_GET_PRIVATE (self,
-                                            EPC_TYPE_ENTROPY_WINDOW,
-                                            EpcEntropyWindowPrivate);
+                                            EPC_TYPE_PROGRESS_WINDOW,
+                                            EpcProgressWindowPrivate);
 
   heading = gtk_label_new (NULL);
 
@@ -77,7 +77,7 @@ epc_entropy_window_init (EpcEntropyWindow *self)
   gtk_progress_bar_set_pulse_step (GTK_PROGRESS_BAR (progress), 0.02);
 
   label = gtk_label_new (_("Type on the keyboard, move your mouse,\n"
-                           "or browse the web to generate some entropy."));
+                           "or browse the web to generate some progress."));
 
   gtk_label_set_justify (GTK_LABEL (label), GTK_JUSTIFY_CENTER);
   gtk_misc_set_alignment (GTK_MISC (label), 0.5, 0.5);
@@ -93,28 +93,28 @@ epc_entropy_window_init (EpcEntropyWindow *self)
   gtk_window_set_deletable (GTK_WINDOW (self), FALSE);
   gtk_container_add (GTK_CONTAINER (self), vbox);
 
-  self->priv->timeout_id = g_timeout_add (40, epc_entropy_window_timeout_cb, progress);
+  self->priv->timeout_id = g_timeout_add (40, epc_progress_window_timeout_cb, progress);
 }
 
 static gboolean
-epc_entropy_window_delete_event (GtkWidget   *widget G_GNUC_UNUSED,
+epc_progress_window_delete_event (GtkWidget   *widget G_GNUC_UNUSED,
                                  GdkEventAny *event G_GNUC_UNUSED)
 {
   return TRUE;
 }
 
 static void
-epc_entropy_window_realize (GtkWidget *widget)
+epc_progress_window_realize (GtkWidget *widget)
 {
-  GTK_WIDGET_CLASS (epc_entropy_window_parent_class)->realize (widget);
+  GTK_WIDGET_CLASS (epc_progress_window_parent_class)->realize (widget);
   gdk_window_set_decorations (widget->window, GDK_DECOR_BORDER);
 }
 
 static gboolean
-epc_entropy_window_destroy_event (GtkWidget   *widget,
+epc_progress_window_destroy_event (GtkWidget   *widget,
                                   GdkEventAny *event)
 {
-  EpcEntropyWindow *self = EPC_ENTROPY_WINDOW (widget);
+  EpcProgressWindow *self = EPC_PROGRESS_WINDOW (widget);
 
   if (self->priv->timeout_id)
     {
@@ -122,74 +122,74 @@ epc_entropy_window_destroy_event (GtkWidget   *widget,
       self->priv->timeout_id = 0;
     }
 
-  return GTK_WIDGET_CLASS (epc_entropy_window_parent_class)->destroy_event (widget, event);
+  return GTK_WIDGET_CLASS (epc_progress_window_parent_class)->destroy_event (widget, event);
 }
 
 static void
-epc_entropy_window_class_init (EpcEntropyWindowClass *cls)
+epc_progress_window_class_init (EpcProgressWindowClass *cls)
 {
   GtkWidgetClass *wclass = GTK_WIDGET_CLASS (cls);
 
-  wclass->delete_event = epc_entropy_window_delete_event;
-  wclass->destroy_event = epc_entropy_window_destroy_event;
-  wclass->realize = epc_entropy_window_realize;
+  wclass->delete_event = epc_progress_window_delete_event;
+  wclass->destroy_event = epc_progress_window_destroy_event;
+  wclass->realize = epc_progress_window_realize;
 
-  g_type_class_add_private (cls, sizeof (EpcEntropyWindowPrivate));
+  g_type_class_add_private (cls, sizeof (EpcProgressWindowPrivate));
 }
 
 /**
- * epc_entropy_window_new:
+ * epc_progress_window_new:
  *
- * Creates a new #EpcEntropyWindow instance.
+ * Creates a new #EpcProgressWindow instance.
  *
- * Returns: The newly created #EpcEntropyWindow.
+ * Returns: The newly created #EpcProgressWindow.
  */
 GtkWidget*
-epc_entropy_window_new (void)
+epc_progress_window_new (void)
 {
-  return g_object_new (EPC_TYPE_ENTROPY_WINDOW,
+  return g_object_new (EPC_TYPE_PROGRESS_WINDOW,
                        "type", GTK_WINDOW_TOPLEVEL,
                        "border-width", 12, NULL);
 }
 
 static gboolean
-epc_entropy_window_idle_cb (gpointer data)
+epc_progress_window_idle_cb (gpointer data)
 {
   gtk_widget_show (data);
   return FALSE;
 }
 
 static gpointer
-epc_entropy_window_enter (void)
+epc_progress_window_enter (void)
 {
   GtkWidget *window;
 
-  window = epc_entropy_window_new ();
-  g_idle_add (epc_entropy_window_idle_cb, window);
+  window = epc_progress_window_new ();
+  g_idle_add (epc_progress_window_idle_cb, window);
 
   return window;
 }
 
 static void
-epc_entropy_window_leave (gpointer data)
+epc_progress_window_leave (gpointer data)
 {
   if (data)
     gtk_widget_destroy (data);
 }
 
 /**
- * epc_entropy_window_install:
+ * epc_progress_window_install:
  *
- * Configures the hooks provided by libepc to use #EpcEntropyWindow when for
+ * Configures the hooks provided by libepc to use #EpcProgressWindow when for
  * performing long standing tasks like for instance generating private keys.
  *
  * See also: #epc_tls_set_private_key_hooks
  *
- * Returns: The newly created #EpcEntropyWindow.
+ * Returns: The newly created #EpcProgressWindow.
  */
 void
-epc_entropy_window_install (void)
+epc_progress_window_install (void)
 {
-  epc_tls_set_private_key_hooks (epc_entropy_window_enter,
-                                 epc_entropy_window_leave);
+  epc_tls_set_private_key_hooks (epc_progress_window_enter,
+                                 epc_progress_window_leave);
 }
